set(INCLUDES
acmod.h
bin_mdef.h
bitvec.h
blkarray_list.h
byteorder.h
case.h
ckd_alloc.h
cmn.h
config_defs.h
configuration.h
decoder.h
dict2pid.h
dict.h
err.h
export.h
feat.h
fe.h
fe_noise.h
fe_type.h
fe_warp_affine.h
fe_warp.h
fe_warp_inverse_linear.h
fe_warp_piecewise_linear.h
filename.h
fsg_history.h
fsg_lextree.h
fsg_model.h
genrand.h
glist.h
hash_table.h
heap.h
hmm.h
jsgf.h
listelem_alloc.h
logmath.h
mdef.h
mmio.h
ms_gauden.h
ms_mgau.h
ms_senone.h
prim_type.h
profile.h
ps_alignment.h
ps_lattice.h
ps_mllr.h
ptm_mgau.h
s2_semi_mgau.h
s3file.h
s3types.h
strfuncs.h
tied_mgau_common.h
tmat.h
vector.h
yin.h
  )
install(FILES ${INCLUDES} DESTINATION include)
